--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                     </div>
 
                     <div>
-                        <a href="#" class="button button--flex" type="submit">
+                        <a href="" class="button button--flex" type="submit">
                             Send message
                             <i class="uil uil-message button__icon"></i>
                         </a>
