--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" x="40" y="20" xlink:href="packages/images/n1.png"/>
+                                    <image class="home__blob-img" x="40" y="0" xlink:href="packages/images/n4.png"/>
                                 </g>
                             </svg>
                         </div>
@@ -1011,7 +1011,7 @@
                     </div>
 
                     <div>
-                        <a href="" class="button button--flex" type="submit">
+                        <a class="button button--flex" type="submit">
                             Send message
                             <i class="uil uil-message button__icon"></i>
                         </a>
